Add persistence module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>swagger</module>
         <module>security</module>
         <module>app</module>
+        <module>persistence</module>
     </modules>
 
     <properties>
