--- a/app/pom.xml
+++ b/app/pom.xml
@@ -15,9 +15,9 @@
     <properties>
 
         <!-- Library versions -->
-
         <log4j2.version>2.8.2</log4j2.version>
         <aspectj.version>1.8.10</aspectj.version>
+        <javax.validation-api.version>1.0.0.GA</javax.validation-api.version>
 
     </properties>
 
@@ -112,12 +112,20 @@
             <version>${aspectj.version}</version>
         </dependency>
 
+        <!-- JRE Provided libraries -->
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${javax.validation-api.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.onewingsoft</groupId>
             <artifactId>swagger</artifactId>
@@ -128,6 +136,12 @@
             <artifactId>security</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.onewingsoft</groupId>
+            <artifactId>persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
