--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -26,12 +26,10 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>${spring.data.commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>${spring.data.jpa.version}</version>
         </dependency>
 
         <!-- Hibernate -->
@@ -50,5 +48,63 @@
             <version>${mysql-connector-java.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**</include>
+                </includes>
+            </resource>
+        </resources>
+
+    </build>
+
+    <profiles>
+
+        <profile>
+
+            <!-- Local profile: It is the profile for the local environment -->
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+
+            <properties>
+
+                <!-- JDBC Data Source: Configuration of the standard connection JDBC DataSource interface. -->
+                <jdbc.url>jdbc:mysql://localhost:3306/security_multimodule?createDatabaseIfNotExist=true</jdbc.url>
+                <jdbc.username>root</jdbc.username>
+                <jdbc.password>admin</jdbc.password>
+
+                <!-- Hibernate properties: https://docs.jboss.org/hibernate/orm/5.0/manual/en-US/html/ch03.html#configuration-optional -->
+                <hibernate.show_sql>true</hibernate.show_sql>
+            </properties>
+
+        </profile>
+    </profiles>
 
 </project>
