--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <modules>
         <module>swagger</module>
         <module>security</module>
-        <module>app</module>
         <module>persistence</module>
+        <module>app</module>
     </modules>
 
     <properties>
@@ -25,7 +25,8 @@
         <!-- Library versions -->
         <spring.framework.version>4.3.9.RELEASE</spring.framework.version>
         <jackson.databind.version>2.8.9</jackson.databind.version>
-
+        <spring.data.commons.version>1.13.4.RELEASE</spring.data.commons.version>
+        <spring.data.jpa.version>1.11.4.RELEASE</spring.data.jpa.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +59,19 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.databind.version}</version>
+            </dependency>
+
+            <!-- Spring Data -->
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-commons</artifactId>
+                <version>${spring.data.commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-jpa</artifactId>
+                <version>${spring.data.jpa.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
